great refactor of route calls in phoenix

--- a/schoolhub/lib/schoolhub_web/templates/affiliation/edit.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/affiliation/edit.html.eex
@@ -1,11 +1,11 @@
-<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routing.route(:course_path, @conn, [:show, @course_id]) %></h1>
 <h2>Change Affiliation</h2>
 
 <strong>Username:</strong>
 <%= Schoolhub.Accounts.get_user!(@affiliation.user_id).credential.username %>
 
-<%= render "edit_form.html", Map.put(assigns, :action, Routes.course_affiliation_path(@conn, :update, @course_id, @affiliation)) %>
+<%= render "edit_form.html", Map.put(assigns, :action, Routing.route(:course_affiliation_path, @conn, [:update, @course_id, @affiliation])) %>
 
 <%= render "explanation.html" %>
 
-<span><%= link "Back", to: Routes.course_affiliation_path(@conn, :index, @course_id) %></span>
+<span><%= link "Back", to: Routing.route(:course_affiliation_path, @conn, [:index, @course_id]) %></span>
