--- a/schoolhub/lib/schoolhub_web/templates/affiliation/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/affiliation/index.html.eex
@@ -1,8 +1,8 @@
-<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routing.route(:course_path, @conn, [:show, @course_id]) %></h1>
 <h2>Listing Course affiliations</h2>
 
-<span><%= link "Add Member", to: Routes.course_affiliation_path(@conn, :new, @course_id) %></span>
-<span><%= link "Back", to: Routes.course_path(@conn, :show, @course_id) %></span>
+<span><%= link "Add Member", to: Routing.route(:course_affiliation_path, @conn, [:new, @course_id]) %></span>
+<span><%= link "Back", to: Routing.route(:course_path, @conn, [:show, @course_id]) %></span>
 
 <table>
   <thead>
@@ -22,10 +22,10 @@
       <td><%= affiliation.affiliation %></td>
 
       <td>
-	<span><%= link "Grades", to: Routes.course_affiliation_grade_path(@conn, :show, @course_id, affiliation, Schoolhub.Grades.get_grade_by_aff!(affiliation.id)) %></span>
-        <span><%= link "Show", to: Routes.course_affiliation_path(@conn, :show, @course_id, affiliation) %></span>
-        <span><%= link "Edit", to: Routes.course_affiliation_path(@conn, :edit, @course_id, affiliation) %></span>
-        <span><%= link "Remove", to: Routes.course_affiliation_path(@conn, :delete, @course_id, affiliation), method: :delete, data: [confirm: "Are you sure?"] %></span>
+	<span><%= link "Grades", to: Routing.route(:course_affiliation_grade_path, @conn, [:show, @course_id, affiliation, Schoolhub.Grades.get_grade_by_aff!(affiliation.id)]) %></span>
+        <span><%= link "Show", to: Routing.route(:course_affiliation_path, @conn, [:show, @course_id, affiliation]) %></span>
+        <span><%= link "Edit", to: Routing.route(:course_affiliation_path, @conn, [:edit, @course_id, affiliation]) %></span>
+        <span><%= link "Remove", to: Routing.route(:course_affiliation_path, @conn, [:delete, @course_id, affiliation]), method: :delete, data: [confirm: "Are you sure?"] %></span>
       </td>
     </tr>
 <% end %>
