--- a/schoolhub/lib/schoolhub_web/templates/file/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/file/show.html.eex
@@ -1,4 +1,4 @@
-<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routing.route(:course_path, @conn, [:show, @course_id]) %></h1>
 <h2>Show File</h2>
 
 <ul>
@@ -20,5 +20,5 @@
 
 </ul>
 
-<span><%= link "Download", to: Routes.course_file_path(@conn, :download, @course_id, @file) %></span>
-<span><%= link "Back", to: Routes.course_file_path(@conn, :index, @course_id) %></span>
+<span><%= link "Download", to: Routing.route(:course_file_path, @conn, [:download, @course_id, @file]) %></span>
+<span><%= link "Back", to: Routing.route(:course_file_path, @conn, [:index, @course_id]) %></span>
