--- a/schoolhub/lib/schoolhub_web/templates/grade/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/grade/show.html.eex
@@ -1,4 +1,4 @@
-<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routing.route(:course_path, @conn, [:show, @course_id]) %></h1>
 <h2>Show Grade</h2>
 
 <ul>
@@ -10,8 +10,8 @@
 
 </ul>
 
-<span><%= link "New", to: Routes.course_affiliation_grade_path(@conn, :new,
-	  @course_id, @affiliation_id) %></span>
-<span><%= link "Edit", to: Routes.course_affiliation_grade_path(@conn, :edit,
-	  @course_id, @affiliation_id, @grade) %></span>
-<span><%= link "Back", to: Routes.course_affiliation_path(@conn, :index, @course_id) %></span>
+<span><%= link "New", to: Routing.route(:course_affiliation_grade_path, @conn, [:new,
+	  @course_id, @affiliation_id]) %></span>
+<span><%= link "Edit", to: Routing.route(:course_affiliation_grade_path, @conn, [:edit,
+	  @course_id, @affiliation_id, @grade]) %></span>
+<span><%= link "Back", to: Routing.route(:course_affiliation_path, @conn, [:index, @course_id]) %></span>
