--- a/schoolhub/lib/schoolhub_web/templates/session/forgot_pw.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/session/forgot_pw.html.eex
@@ -4,7 +4,7 @@
 <label>If it exists in the database, an email will be sent shortly to the given address to recover your profile.</label>
 <label>Please check your spam folder.</label>
 
-<%= form_for @conn, Routes.session_path(@conn, :send_email), [method: :post], fn _ -> %>
+<%= form_for @conn, Routing.route(:session_path, @conn, [:send_email]), [method: :post], fn _ -> %>
   <input type="email" id="email" name="email" placeholder="Your email address" required>
 
   <div>
@@ -12,4 +12,4 @@
   </div>
 <% end %>
 
-<span><%= link "Back", to: Routes.session_path(@conn, :new) %></span>
+<span><%= link "Back", to: Routing.route(:session_path, @conn, [:new]) %></span>
