--- a/schoolhub/lib/schoolhub_web/templates/user/change_pw.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/user/change_pw.html.eex
@@ -3,7 +3,7 @@
 <label for="username">Username</label>
 <input type="text" id="username" name="username" value="<%= @username %>" readonly>
 
-<%= form_for @conn, Routes.user_path(@conn, :update_pw, @token), [method: :put], fn _ -> %>
+<%= form_for @conn, Routing.route(:user_path, @conn, [:update_pw, @token]), [method: :put], fn _ -> %>
   <label for="password">New password</label>
   <input type="password" id="password" name="password" placeholder="Your new password" onchange='check_pass();'>
   <label for="confirm_password">Confirm new password</label>
@@ -14,7 +14,7 @@
   </div>
 <% end %>
 
-<span><%= link "Back", to: Routes.session_path(@conn, :new) %></span>
+<span><%= link "Back", to: Routing.route(:session_path, @conn, [:new]) %></span>
 
 <script>
   function check_pass() {
