--- a/schoolhub/lib/schoolhub_web/templates/course/new.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/course/new.html.eex
@@ -1,5 +1,5 @@
 <h1>New Course</h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.course_path(@conn, :create)) %>
+<%= render "form.html", Map.put(assigns, :action, Routing.route(:course_path, @conn, [:create])) %>
 
-<span><%= link "Back", to: Routes.course_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routing.route(:course_path, @conn, [:index]) %></span>
