--- a/schoolhub/lib/schoolhub_web/templates/file/new.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/file/new.html.eex
@@ -1,6 +1,6 @@
-<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routing.route(:course_path, @conn, [:show, @course_id]) %></h1>
 <h2>New File</h2>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.course_file_path(@conn, :create, @course_id)) %>
+<%= render "form.html", Map.put(assigns, :action, Routing.route(:course_file_path, @conn, [:create, @course_id])) %>
 
-<span><%= link "Back", to: Routes.course_file_path(@conn, :index, @course_id) %></span>
+<span><%= link "Back", to: Routing.route(:course_file_path, @conn, [:index, @course_id]) %></span>
