--- a/schoolhub/lib/schoolhub_web/templates/layout/app.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/layout/app.html.eex
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Schoolhub · Phoenix Framework</title>
-    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
-    <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+    <link rel="stylesheet" href="<%= Routing.route(:static_path, @conn, ["/css/app.css"]) %>"/>
+    <script defer type="text/javascript" src="<%= Routing.route(:static_path, @conn, ["/js/app.js"]) %>"></script>
   </head>
   <body>
     <header>
@@ -15,13 +15,13 @@
         <nav role="navigation">
           <ul>
             <li><a href="<%= get_session_url(@conn) %>"><%= get_session_link_text(@conn) %></a></li>
-            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
+            <%= if function_exported?("SchoolhubWeb.Router.Helpers", :live_dashboard_path, 2) do %>
+              <li><%= link "LiveDashboard", to: Routing.route(:live_dashboard_path, @conn, [:home]) %></li>
             <% end %>
           </ul>
         </nav>
-        <a href="<%= Routes.page_path(@conn, :index) %>" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/schoolhub.png") %>" alt="Schoolhub Logo"/>
+        <a href="<%= Routing.route(:page_path, @conn, [:index]) %>" class="phx-logo">
+          <img src="<%= Routing.route(:static_path, @conn, ["/images/schoolhub.png"]) %>" alt="Schoolhub Logo"/>
         </a>
       </section>
     </header>
