--- a/schoolhub/lib/schoolhub_web/templates/post/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/post/show.html.eex
@@ -1,4 +1,4 @@
-<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routing.route(:course_path, @conn, [:show, @course_id]) %></h1>
 <h2>Show Post</h2>
 
 <ul>
@@ -20,8 +20,8 @@
 
 </ul>
 
-<span><%= link "Edit", to: Routes.course_post_path(@conn, :edit, @course_id, @post) %></span>
-<span><%= link "Back", to: Routes.course_post_path(@conn, :index, @course_id) %></span>
+<span><%= link "Edit", to: Routing.route(:course_post_path, @conn, [:edit, @course_id, @post]) %></span>
+<span><%= link "Back", to: Routing.route(:course_post_path, @conn, [:index, @course_id]) %></span>
 
 <%= render SchoolhubWeb.ReplyView, "index.html",
     conn: @conn, course_id: @course_id, post_id: @post.id, post_replies: @replies %>
