--- a/schoolhub/lib/schoolhub_web/templates/privilege/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/privilege/index.html.eex
@@ -1,6 +1,6 @@
 <h1>Listing Privileges</h1>
 
-<span><%= link "Back", to: Routes.page_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routing.route(:page_path, @conn, [:index]) %></span>
 
 <table>
   <thead>
@@ -20,8 +20,8 @@
       <td><%= user.privilege.level %></td>
 
       <td>
-        <span><%= link "Show", to: Routes.privilege_path(@conn, :show, user.privilege) %></span>
-        <span><%= link "Edit", to: Routes.privilege_path(@conn, :edit, user.privilege) %></span>
+        <span><%= link "Show", to: Routing.route(:privilege_path, @conn, [:show, user.privilege]) %></span>
+        <span><%= link "Edit", to: Routing.route(:privilege_path, @conn, [:edit, user.privilege]) %></span>
       </td>
     </tr>
 <% end %>
