--- a/schoolhub/lib/schoolhub_web/templates/qreply/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/qreply/show.html.eex
@@ -1,4 +1,4 @@
-<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routing.route(:course_path, @conn, [:show, @course_id]) %></h1>
 <h2>Show Reply</h2>
 
 <ul>
@@ -13,5 +13,5 @@
 
 </ul>
 
-<span><%= link "Edit", to: Routes.course_question_qreply_path(@conn, :edit, @course_id, @question_id, @qreply) %></span>
-<span><%= link "Back", to: Routes.course_question_qreply_path(@conn, :index, @course_id, @question_id) %></span>
+<span><%= link "Edit", to: Routing.route(:course_question_qreply_path, @conn, [:edit, @course_id, @question_id, @qreply]) %></span>
+<span><%= link "Back", to: Routing.route(:course_question_qreply_path, @conn, [:index, @course_id, @question_id]) %></span>
