--- a/schoolhub/lib/schoolhub_web/templates/question/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/question/show.html.eex
@@ -1,4 +1,4 @@
-<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routing.route(:course_path, @conn, [:show, @course_id]) %></h1>
 <h2>Show Question</h2>
 
 <ul>
@@ -30,15 +30,15 @@
 
 </ul>
 
-<span><%= link "Edit", to: Routes.course_question_path(@conn, :edit, @course_id, @question) %></span>
+<span><%= link "Edit", to: Routing.route(:course_question_path, @conn, [:edit, @course_id, @question]) %></span>
 
 <span><%= if is_follow(@conn, @question), do:
-		  (link "Unfollow", to: Routes.course_question_follow_path(@conn, :unfollow, @course_id, @question), method: :delete),
+		  (link "Unfollow", to: Routing.route(:course_question_follow_path, @conn, [:unfollow, @course_id, @question]), method: :delete),
 		  else:
-		  (link "Follow", to: Routes.course_question_follow_path(@conn, :follow, @course_id, @question), method: :post)
+		  (link "Follow", to: Routing.route(:course_question_follow_path, @conn, [:follow, @course_id, @question]), method: :post)
 	  %></span>
 
-<span><%= link "Back", to: Routes.course_question_path(@conn, :index, @course_id) %></span>
+<span><%= link "Back", to: Routing.route(:course_question_path, @conn, [:index, @course_id]) %></span>
 
 <%= render SchoolhubWeb.QreplyView, "index.html",
     conn: @conn, course_id: @course_id, question_id: @question.id, question_replies: @qreplies %>
