--- a/schoolhub/lib/schoolhub_web/templates/session/new.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/session/new.html.eex
@@ -6,14 +6,14 @@
        value="<%= get_protocol() <> "://" <>  get_domain() <> ":" <> get_port() <> "/ws-xmpp" %>">
 <input type="hidden" id="domain" name="domain" value="<%= get_host() %>">
 
-<span><%= link "Forgot password", to: Routes.session_path(@conn, :forgot_pw) %></span>
+<span><%= link "Forgot password", to: Routing.route(:session_path, @conn, [:forgot_pw]) %></span>
 
-<%= form_for @conn, Routes.session_path(@conn, :create), [method: :post], fn _ -> %>
+<%= form_for @conn, Routing.route(:session_path, @conn, [:create]), [method: :post], fn _ -> %>
   <div>
     <input type="button" id="login_button" name="login_button" value="Login">  
   </div>
 <% end %>
 
-<span><%= link "New User", to: Routes.user_path(@conn, :new) %></span>
+<span><%= link "New User", to: Routing.route(:user_path, @conn, [:new]) %></span>
 
-<script src='<%= Routes.static_path(@conn, "/js/auth.js") %>'></script>
+<script src='<%= Routing.route(:static_path, @conn, ["/js/auth.js"]) %>'></script>
