--- a/schoolhub/lib/schoolhub_web/templates/user/new.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/user/new.html.eex
@@ -1,5 +1,5 @@
 <h1>New User</h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.user_path(@conn, :create)) %>
+<%= render "form.html", Map.put(assigns, :action, Routing.route(:user_path, @conn, [:create])) %>
 
-<span><%= link "Back", to: Routes.session_path(@conn, :new) %></span>
+<span><%= link "Back", to: Routing.route(:session_path, @conn, [:new]) %></span>
