--- a/schoolhub/lib/schoolhub_web/templates/layout/app.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/layout/app.html.eex
@@ -15,7 +15,7 @@
         <nav role="navigation">
           <ul>
             <li><a href="<%= get_session_url(@conn) %>"><%= get_session_link_text(@conn) %></a></li>
-            <%= if function_exported?("SchoolhubWeb.Router.Helpers", :live_dashboard_path, 2) do %>
+            <%= if function_exported?(:"SchoolhubWeb.Router.Helpers", :live_dashboard_path, 2) do %>
               <li><%= link "LiveDashboard", to: Routing.route(:live_dashboard_path, @conn, [:home]) %></li>
             <% end %>
           </ul>
