--- a/schoolhub/lib/schoolhub_web/templates/chat/chat.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/chat/chat.html.eex
@@ -4,8 +4,10 @@
 <strong><%= Schoolhub.Courses.get_username!(@user.id, @course_id) %></strong>
 
 <input type="hidden" id="username" name="username" value="<%= @user.credential.username %>">
+<input type="hidden" id="internal_host" name="internal_host"
+       value="<%= Routing.internal_host(@conn) %>">
 <input type="hidden" id="xmpp_url" name="xmpp_url"
-       value="<%= get_protocol() <> "://" <>  get_domain() <> ":" <> get_port() <> "/ws-xmpp" %>">
+       value="<%= get_protocol() <> "://" <>  get_domain() <> ":" <> get_port() <> Routing.internal_host(@conn) <> "/ws-xmpp" %>">
 <input type="hidden" id="domain" name="domain" value="<%= get_host() %>">
 <input type="hidden" id="self" name="self" value="<%= @self.credential.username %>">
 <input type="hidden" id="token" name="token" value="<%= @token %>">
