--- a/schoolhub/lib/schoolhub_web/templates/session/new.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/session/new.html.eex
@@ -2,8 +2,10 @@
 
 <input type="text" id="username" name="username" placeholder="Username">
 <input type="password" id="password" name="password" placeholder="Password">
+<input type="hidden" id="internal_host" name="internal_host"
+       value="<%= Routing.internal_host(@conn) %>">
 <input type="hidden" id="xmpp_url" name="xmpp_url"
-       value="<%= get_protocol() <> "://" <>  get_domain() <> ":" <> get_port() <> "/ws-xmpp" %>">
+       value="<%= get_protocol() <> "://" <>  get_domain() <> ":" <> get_port() <> Routing.internal_host(@conn) <> "/ws-xmpp" %>">
 <input type="hidden" id="domain" name="domain" value="<%= get_host() %>">
 
 <span><%= link "Forgot password", to: Routing.route(:session_path, @conn, [:forgot_pw]) %></span>
