--- a/router/lib/schoolhub_router_web/templates/layout/app.html.eex
+++ b/router/lib/schoolhub_router_web/templates/layout/app.html.eex
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>SchoolhubRouter · Phoenix Framework</title>
+    <title>Schoolhub Router · Phoenix Framework</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
@@ -19,8 +19,8 @@
             <% end %>
           </ul>
         </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
+        <a href="<%= Routes.page_path(@conn, :index) %>" class="schoolhub-logo">
+          <img src="<%= Routes.static_path(@conn, "/images/schoolhub.png") %>" alt="Phoenix Framework Logo"/>
         </a>
       </section>
     </header>
