--- a/router/lib/schoolhub_router_web/templates/page/phoenix.html.eex
+++ b/router/lib/schoolhub_router_web/templates/page/phoenix.html.eex
@@ -1,6 +1,6 @@
 <section class="phx-hero">
-  <h1><%= gettext "Welcome to %{name}!", name: "Schoolhub" %></h1>
-  <p>Keep in touch with your students or teachers</p>
+  <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
+  <p>Peace of mind from prototype to production</p>
 </section>
 
 <section class="row">
