adding k8s support to router phoenix server

--- a/router/lib/schoolhub_router_web/templates/server/index.html.eex
+++ b/router/lib/schoolhub_router_web/templates/server/index.html.eex
@@ -18,7 +18,7 @@
       <td><%= server.active %></td>
 
       <td>
-        <span><%= link "Show", to: Routes.server_path(@conn, :show, server) %></span>%></span>
+        <span><%= link "Show", to: Routes.server_path(@conn, :show, server) %></span>
       </td>
     </tr>
 <% end %>
