--- a/schoolhub/lib/schoolhub_web/templates/layout/app.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/layout/app.html.eex
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Schoolhub · Phoenix Framework</title>
+    <title>Schoolhub</title>
     <link rel="stylesheet" href="<%= Routing.route(:static_path, @conn, ["/css/app.css"]) %>"/>
     <script defer type="text/javascript" src="<%= Routing.route(:static_path, @conn, ["/js/app.js"]) %>"></script>
   </head>
@@ -14,6 +14,7 @@
       <section class="container">
         <nav role="navigation">
           <ul>
+	    <li><%= link "Router", to: "/router" %></a></li>
             <li><a href="<%= get_session_url(@conn) %>"><%= get_session_link_text(@conn) %></a></li>
             <%= if function_exported?(:"SchoolhubWeb.Router.Helpers", :live_dashboard_path, 2) do %>
               <li><%= link "LiveDashboard", to: Routing.route(:live_dashboard_path, @conn, [:home]) %></li>
