--- a/router/lib/schoolhub_router_web/templates/server/new.html.eex
+++ b/router/lib/schoolhub_router_web/templates/server/new.html.eex
@@ -2,4 +2,6 @@
 
 <%= render "form.html", Map.put(assigns, :action, Routes.server_path(@conn, :create)) %>
 
+(This is where you pay money)
+
 <span><%= link "Back", to: Routes.page_path(@conn, :index) %></span>
