--- a/router/lib/schoolhub_router_web/templates/server/new.html.eex
+++ b/router/lib/schoolhub_router_web/templates/server/new.html.eex
@@ -1,7 +1,7 @@
 <h1>New Server</h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.server_path(@conn, :create)) %>
+(This is where you pay money)</br>
 
-(This is where you pay money)
+<%= render "form.html", Map.put(assigns, :action, Routes.server_path(@conn, :create)) %>
 
 <span><%= link "Back", to: Routes.page_path(@conn, :index) %></span>
