--- a/router/lib/schoolhub_router_web/templates/layout/app.html.eex
+++ b/router/lib/schoolhub_router_web/templates/layout/app.html.eex
@@ -13,6 +13,7 @@
       <section class="container">
         <nav role="navigation">
           <ul>
+	    <li><%= link "What is Schoolhub?", to: Routes.description_path(@conn, :index) %></a></li>
             <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
               <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
             <% end %>
