--- a/router/lib/schoolhub_router_web/templates/description/index.html.eex
+++ b/router/lib/schoolhub_router_web/templates/description/index.html.eex
@@ -1,3 +1,5 @@
 <h1>What is Schoolhub?</h1>
 
-<span><%= link "Back", to: Routes.page_path(@conn, :index) %></span>
+<%= render "main_desc.html" %>
+
+</br><span><%= link "Back", to: Routes.page_path(@conn, :index) %></span>
