--- a/router/lib/schoolhub_router_web/templates/description/index.html.eex
+++ b/router/lib/schoolhub_router_web/templates/description/index.html.eex
@@ -1,5 +1,5 @@
 <h1>What is Schoolhub?</h1>
 
-<%= render "main_desc.html" %>
+<%= render "main_desc.html", conn: @conn %>
 
 </br><span><%= link "Back", to: Routes.page_path(@conn, :index) %></span>
