router unsubscribe from server page skeleton

--- a/router/lib/schoolhub_router_web/templates/server/index.html.eex
+++ b/router/lib/schoolhub_router_web/templates/server/index.html.eex
@@ -5,6 +5,7 @@
     <tr>
       <th>Name</th>
       <th>Address</th>
+      <th>Owner email</th>
       <th>Active</th>
 
       <th></th>
@@ -15,6 +16,7 @@
     <tr>
       <td><%= server.name %></td>
       <td><%= server.address %></td>
+      <td><%= server.owner_email %></td>
       <td><%= server.active %></td>
 
       <td>
