--- a/router/lib/schoolhub_router_web/templates/server/show.html.eex
+++ b/router/lib/schoolhub_router_web/templates/server/show.html.eex
@@ -13,6 +13,11 @@
   </li>
 
   <li>
+    <strong>Owner email:</strong>
+    <%= @server.owner_email %>
+  </li>
+
+  <li>
     <strong>Active:</strong>
     <%= @server.active %>
   </li>
