--- a/router/lib/schoolhub_router_web/templates/page/index.html.eex
+++ b/router/lib/schoolhub_router_web/templates/page/index.html.eex
@@ -5,4 +5,5 @@
 
 <%= render "redirect_form.html", conn: @conn %>
 
-<span><%= link "New server", to: Routes.server_path(@conn, :new) %></span>
+<span><%= link "New server", to: Routes.server_path(@conn, :new) %></span></br>
+<span><%= link "Unsubscribe from server", to: Routes.server_path(@conn, :unsubscribe) %></span>
